--- a/AxmCarService/src/main/resources/application.yml
+++ b/AxmCarService/src/main/resources/application.yml
@@ -1,22 +1,5 @@
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/axm_car_service
-    username: root
-    driver: com.mysql.jdbc.Driver
-    password :
+  profiles:
+    active: dev
 
-  jpa:
-    database-platform: org.hibernate.dialect.MySQL8InnoDBDialect
-    generate-ddl: true
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate :
-        globally_quoted_identifiers: true
-        dialect: org.hibernate.dialect.MySQL8Dialect
-  sql:
-    init:
-      mode: always
-
-
+# @spring.profiles.active@
