--- a/AxmCarService/src/main/resources/application-dev.yml
+++ b/AxmCarService/src/main/resources/application-dev.yml
@@ -1,3 +1,7 @@
+server:
+  port: 8081
+
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/axm_car_service
@@ -17,7 +21,9 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
   sql:
     init:
-      mode: never
+      mode: always
+    update:
+      mode: always
 
 application:
   title: AxmCarService
