--- a/AxmCarService/src/main/resources/application-prod.yml
+++ b/AxmCarService/src/main/resources/application-prod.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://prod:3306/axm_car_service
+    url: jdbc:mysql://localhost:1981/axm_car_service
     username: root
     driver: com.mysql.jdbc.Driver
-    password :
+    password : root
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL8InnoDBDialect
@@ -17,9 +17,14 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
   sql:
     init:
-      mode: never
+      mode: always
+    update:
+      mode: always
 
 application:
   title: AxmCarService
   version: 1.0
 
+jwt:
+  secret:
+    cevafoartecomplex
